change copy-mode to copy-mode-vi

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,7 @@ set-option -g status-justify centre
 set-option -g status-position bottom
 
 # default window title colors
+set-window-option -g mode-keys vi
 set-window-option -g window-status-fg colour008
 set-window-option -g window-status-bg default
 set-window-option -g window-status-attr dim
