feat: update zshrc template feat: jtmux init script feat: change tmux color

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,8 +13,8 @@ set-option -g status-justify centre
 set-option -g status-position bottom
 
 # status-left
-set-option -g status-left "#[fg=white][ #[fg=cyan]#{=10:session_name} #[fg=white]]"
+set-option -g status-left "#[fg=colour015][ #[fg=colour005]#{=10:session_name} #[fg=colour015]]"
 
 # status-right-line
-set-option -g status-right "#[fg=white][ #[fg=magenta]%Y-%m-%d #[fg=white]]"
+set-option -g status-right "#[fg=colour015][ #[fg=colour006]%Y-%m-%d #[fg=colour015]]"
 
