feat: tmux change date to hostname

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,5 +16,5 @@ set-option -g status-position bottom
 set-option -g status-left "#[fg=colour015][ #[fg=colour005]#{=10:session_name} #[fg=colour015]]"
 
 # status-right-line
-set-option -g status-right "#[fg=colour015][ #[fg=colour006]%Y-%m-%d #[fg=colour015]]"
+set-option -g status-right "#[fg=colour015][ #[fg=colour006]#H #[fg=colour015]]"
 
