feat(vscode): ext copilot setting

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -42,4 +42,5 @@
     // others
     "makefile.configureOnOpen": false,
     "githubPullRequests.pullBranch": "never",
+    "github.copilot.editor.enableAutoCompletions": true,
 }
