--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -24,12 +24,11 @@
     "editor.suggest.preview": true,
     "editor.quickSuggestionsDelay": 0,
     "editor.inlineSuggest.enabled": true,
-    "github.copilot.editor.enableAutoCompletions": true,
+    "github.copilot.nextEditSuggestions.enabled": true,
     "github.copilot.enable": {
-        "*": true,
-        "plaintext": "true",
-        "markdown": "true",
-        "scminput": false
+        "markdown": true,
+        "plaintext": true,
+        "scminput": true
     },
 
     // c/c++
@@ -44,7 +43,6 @@
     // others
     "makefile.configureOnOpen": false,
     "githubPullRequests.pullBranch": "never",
-    "github.copilot.editor.enableAutoCompletions": true,
     "workbench.activityBar.location": "top",
     "gitlens.views.scm.grouped.views": {
         "commits": true,
